# open-accounting

./: .gitignore  README.md  start.ps1  start.sh
backend/: .env.example  pyproject.toml
backend/app/: config.py  deps.py  desktop.py  frontend.py  hooks.py  main.py
backend/app/db/: base.py  company.py  errors.py  master.py  migrations.py  schema_sync.py
backend/app/models/: company.py  master.py  outgoing.py
backend/app/schemas/: _currency.py  _dates.py  (+13 more)
backend/scripts/: seed_realistic.py  smoke_e2e.py
backend/tests/: _request_headers.py  conftest.py  test_accounting_period_lock.py  test_accounts_crud.py  test_attachments_dedup.py  test_bank_import_m3.py  test_bank_pdf.py  test_bank_transaction_idempotency.py  test_clients_consistency.py  test_companies_atomic.py  test_contacts_crud.py  test_current_date_controls.py  test_dashboard.py  test_db_upgrade_regression.py  test_excel_import_savepoint.py  test_gst_m23.py  test_gst_refund_account_type.py  test_invoice_api.py  test_invoice_flow.py  test_invoice_payment_allocations.py  test_invoice_posting.py  test_invoice_posting_integration.py  test_invoice_posting_migration.py  test_journal.py  test_m2_audit_fixes.py  test_m5_shakeout.py  test_migrations.py  test_network_policy.py  test_non_gst_invariant.py  test_outgoing_flow.py  test_pdf_render.py  test_reconciliation_m3.py  test_registration_number_normalisation.py  test_release_blocker_invariants.py  test_report_render_escape.py  test_reports_m22.py  test_reports_p1_seams.py  test_round2_robustness.py  test_round3_robustness.py  test_round4_accounting_invariants.py  (+5 more)
(+120 files in other folders)
